--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/navbar": "^2.0.37",
     "@radix-ui/react-icons": "^1.3.0",
+    "@splinetool/react-spline": "^4.0.0",
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
