--- a/package.json
+++ b/package.json
@@ -17,16 +17,22 @@
     "@tsparticles/react": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.445.0",
+    "moment": "^2.30.1",
     "next": "14.2.13",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
     "react-dom": "^18",
+    "react-export-table-to-excel-xlsx": "^1.0.1",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-big-calendar": "^1.15.0",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
