--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@keyvaluesystems/react-stepper": "^1.0.4",
     "@nextui-org/navbar": "^2.0.37",
     "@radix-ui/react-icons": "^1.3.0",
     "@splinetool/react-spline": "^4.0.0",
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/engine": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "awesome-react-stepper": "^1.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -27,6 +29,7 @@
     "react-big-calendar": "^1.15.0",
     "react-dom": "^18",
     "react-export-table-to-excel-xlsx": "^1.0.1",
+    "react-form-stepper": "^2.0.3",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "xlsx": "^0.18.5"
